update on topnav and password function on customer update

--- a/project/topnav.html
+++ b/project/topnav.html
@@ -9,23 +9,35 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" aria-current="page" href="index.php">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="product_create.php">Create Product</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Product
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item text-center" href="product_create.php">Create Product</a></li>
+                        <li><a class="dropdown-item text-center" href="product_read.php">Product List</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="product_read.php">Product List</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Customer
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item text-center" href="customer_create.php">Create Customer</a></li>
+                        <li><a class="dropdown-item text-center" href="customer_read.php">Customer List</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="customer_create.php">Create Customer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="customer_read.php">Customer List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="order_create.php">Order Form</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="order_read.php">Order List</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Order
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item text-center" href="order_create.php">Order Form</a></li>
+                        <li><a class="dropdown-item text-center" href="order_read.php">Order List</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="contact_us.php">Contact Us</a>
