--- a/project/topnav.html
+++ b/project/topnav.html
@@ -36,7 +36,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item text-center" href="order_create.php">Order Form</a></li>
-                        <li><a class="dropdown-item text-center" href="order_read.php">Order List</a></li>
+                        <li><a class="dropdown-item text-center" href="order_summary.php">Order Summary</a></li>
+                        <li><a class="dropdown-item text-center" href="order_read.php">Order Details</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
