added total price at order read and update on order edit

--- a/project/topnav.html
+++ b/project/topnav.html
@@ -37,7 +37,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item text-center" href="order_create.php">Order Form</a></li>
                         <li><a class="dropdown-item text-center" href="order_summary.php">Order Summary</a></li>
-                        <li><a class="dropdown-item text-center" href="order_read.php">Order Details</a></li>
+                        <!--<li><a class="dropdown-item text-center" href="order_read.php">Order Details</a></li>-->
                     </ul>
                 </li>
                 <li class="nav-item">
